Theme: Fix truncation of online workshop calendar entries
Fixes https://github.com/WordPress/Learn/issues/2834

--- a/wp-content/themes/pub/wporg-learn-2024/src/style/_wporg-meeting-calendar.scss
+++ b/wp-content/themes/pub/wporg-learn-2024/src/style/_wporg-meeting-calendar.scss
@@ -151,6 +151,7 @@
 
 		.wporg-meeting-calendar__cell-event-title {
 			font-weight: 400;
+			white-space: unset;
 		}
 	}
 
